--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#662753</color>
+    <color name="colorPrimaryDark">#590f2a</color>
+    <color name="colorPrimaryLight">#b56984</color>
+    <color name="colorTextIcons">#86138c</color>
+    <color name="colorAccent">#212121</color>
+    <color name="colorPrimaryText">#757575</color>
+    <color name="colorSecondaryText">#FFFFFF</color>
+    <color name="colorDivider">#BDBDBD</color>
 </resources>
