--- a/app/src/main/res/layout/activity_shopping.xml
+++ b/app/src/main/res/layout/activity_shopping.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.github.kavata9.myshoping.ShoppingActivity">
+    tools:context="com.github.kavata9.myshoping.ui.ShoppingActivity">
 
     <TextView
         android:layout_width="wrap_content"
