--- a/app/src/main/res/layout/shopping_list_item.xml
+++ b/app/src/main/res/layout/shopping_list_item.xml
@@ -30,8 +30,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="One Brand Type"
-            android:id="@+id/categoryNodeTextView"
+            android:text="One Brand price"
+            android:id="@+id/salePriceTextView"
             android:layout_below="@+id/productNameTextView"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
